<resources>
    <string name="app_name">Home Community</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Salir</string>
    <string name="lbl_claims">Observaciones y Reclamos</string>
    <string name="lbl_news">Noticias</string>
    <string name="lbl_people">Residentes</string>
    <string name="lbl_subject">Asunto</string>
    <string name="lbl_description">Descripción</string>
    <string name="lbl_send">Enviar</string>
    <string name="loading">Cargando</string>
    <string name="lbl_claim_id">El id del reclamo es </string>
    <string name="lbl_permission">Los permisos son obligatorios para el uso de la app</string>
    <string name="lbl_permission_granted">Permisos aceptados</string>
    <string name="take_photo">Tomar Foto</string>
    <string name="select_gallery">Galeria</string>
    <string name="select_option">Seleccione una opción</string>
    <string name="wait_please">Espere por favor un momento</string>
    <string name="img_mandatory">Por favor coloque una imagen</string>
    <string name="field_required">El campo es obligatorio</string>
    <string name="lbl_new_claims">Realizar Reclamos</string>
    <string name="sync">Sincronizar</string>
</resources>
