<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.views.menu.MenuActivity"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp">

    <Button
        android:id="@+id/btnOpenClaim"
        style="@style/botonMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_question_answer"
        android:text="@string/lbl_claims" />

    <Button
        android:id="@+id/btnOpenNews"
        style="@style/botonMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_library_books"
        android:text="@string/lbl_news" />

    <Button
        android:id="@+id/btnOpenPeople"
        style="@style/botonMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_people_menu"
        android:text="@string/lbl_people" />

</LinearLayout>